infra/microservices/k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend-deployment
  labels:
    app: ecommerce-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
      - name: ecommerce
        image: manrodri/ecommerce
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
