infra/microservices/k8s/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ecommerce.dev
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerce-service
                port:
                  number: 8000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                   number: 80
